-
Bug
-
Resolution: Done
-
P2: Important
-
5.1.0
-
None
-
54987c6bf55b159d3ddb79461439700f6e0111f9
Currently there are two ways that appear to ensure you can build the examples when you configure, this being -make examples and -compile-examples. Currently if you don't specify anything it defaults to not making the examples which is not clear from the configure help at all.
In addition, it seems that doing -make examples also has no effect, and -compile-examples needs to be used instead. Can this please be cleaned up as right now it's confusing as to what needs to be done just to get the examples in a state that can actually be compiled at some point later on down the line. I would expect that -compile-examples is on by default and it should be turned off if this is not required.
| For Gerrit Dashboard: QTBUG-32449 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 61150,1 | default to -compile-examples | stable | qt/qtbase | Status: MERGED | +2 | 0 |